# RM_prac

./: .gitmodules  LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
practica1_pkg/launch/: pub_sub.launch.py  pub_sub_param.launch.py
practica2_pkg/: CMakeLists.txt
practica2_pkg/src/: ejercicio_practica2.cpp
src/bringup_turtlebot3_pkg/: CMakeLists.txt
src/bringup_turtlebot3_pkg/src/: cmd_vel_publisher.cpp
src/intro_ros_pkg/launch/: intro_ros_remap.launch.py
src/kinematic_control_pkg/: CMakeLists.txt
src/kinematic_control_pkg/launch/: rviz2.launch.py
src/kinematic_control_pkg/src/: controller_odom.cpp  infinite_reference_node.cpp
src/laser_line_extraction/: CMakeLists.txt  package.xml
src/laser_line_extraction/include/laser_line_extraction/: line.h
src/laser_line_extraction/launch/: line_extraction_launch.py
src/laser_line_extraction/msg/: LineSegment.msg  LineSegmentList.msg
src/laser_line_extraction/src/: line.cpp  line_extraction.cpp  line_extraction_node.cpp
src/maintenance_mode_pkg/: CMakeLists.txt  package.xml
src/maintenance_mode_pkg/src/: maintenance_mode.cpp
src/pkg5_interface/: CMakeLists.txt  package.xml
src/pkg5_interface/srv/: ResetMap.srv
src/practica1_pkg/: CMakeLists.txt
src/practica1_pkg/launch/: practica1_param.launch.py  practica1_remap.launch.py
src/practica2_pkg/: CMakeLists.txt
src/practica2_pkg/src/: ejercicio_practica2.cpp  pub_trajectory_node.cpp
src/practica3_pkg/: CMakeLists.txt
src/practica3_pkg/src/: transform_listener.cpp
src/practica4_pkg/: CMakeLists.txt  package.xml
src/practica4_pkg/launch/: practica4_odom.launch.py  practica4_scan.launch.py  practica4_scan_matching.launch.py
src/practica4_pkg/rviz/: practica4_pkg.rviz
src/practica4_pkg/src/: map_pointcloud_node.cpp
src/practica5_pkg/: CMakeLists.txt
src/practica5_pkg/launch/: practica5_kinematic_controller_launch.py
src/practica5_pkg/src/: controller_odom.cpp  infinite_reference_node.cpp
src/practica6_pkg/: CMakeLists.txt  package.xml
src/practica6_pkg/config/: path.yaml
src/practica6_pkg/launch/: practica6_pure_pursuit_controller_eventhandler_launch.py  practica6_pure_pursuit_controller_launch.py
src/practica6_pkg/src/: pure_pursuit_odom.cpp  waypoints_node.cpp
src/practica7_pkg/: CMakeLists.txt  package.xml
src/practica7_pkg/launch/: practica7_localization_launch.py
src/practica8_pkg/: CMakeLists.txt  package.xml
src/practica8_pkg/launch/: bringup_launch.py  navigation2.launch.py  navigation2_test.launch.py
src/practica8_pkg/param/: burger.yaml  nav2_params.yaml
src/pure_pursuit_pkg/: CMakeLists.txt
src/ros2_laser_scan_matcher/: CMakeLists.txt  package.xml
src/ros2_vfh/: CMakeLists.txt  package.xml
src/ros2_vfh/src/: vfh_node.cpp  (+3 more)
src/slam_pkg/: CMakeLists.txt
src/transformations_pkg/: CMakeLists.txt
src/turtlebot3_coppeliasim/: CMakeLists.txt
src/upv_maps_pkg/: CMakeLists.txt
(+248 files in other folders)
